package designpattern02_抽象工厂模式;

public interface Light {
}
