package designpattern02_抽象工厂模式.light;


import designpattern02_抽象工厂模式.Light;

/**
 * 奥迪车灯
 */
public class AudiLight implements Light {
}
