package designpattern02_抽象工厂模式.light;

import designpattern02_抽象工厂模式.Light;

/**
 * 宝马车灯
 */
public class BMWLight implements Light {
}
