package designpattern02_抽象工厂模式.light;


import designpattern02_抽象工厂模式.Light;

/**
 * 奔驰车灯
 */
public class BenzLight implements Light {
}
