package designpattern02_抽象工厂模式.wheel;


import designpattern02_抽象工厂模式.Wheel;

/**
 * 奥迪牌车轮
 */
public class AudiWheel implements Wheel {
}
