package designpattern02_抽象工厂模式.wheel;


import designpattern02_抽象工厂模式.Wheel;

/**
 * 宝马牌车轮
 */
public class BMWWheel implements Wheel {
}
