package designpattern02_抽象工厂模式.wheel;


import designpattern02_抽象工厂模式.Wheel;

/**
 * 奔驰牌车轮
 */
public class BenzWheel implements Wheel {
}
